--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Generate SRI hashes
         id: sri
@@ -22,15 +24,35 @@ jobs:
           CSS_HASH=$(openssl dgst -sha384 -binary foundprint.css | openssl base64 -A)
           echo "js_hash=sha384-$JS_HASH" >> $GITHUB_OUTPUT
           echo "css_hash=sha384-$CSS_HASH" >> $GITHUB_OUTPUT
-          echo "Generated JS hash: sha384-$JS_HASH"
-          echo "Generated CSS hash: sha384-$CSS_HASH"
+
+      - name: Generate changelog
+        id: changelog
+        run: |
+          # Get previous tag
+          PREV_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+
+          if [ -z "$PREV_TAG" ]; then
+            # First release - get all commits
+            COMMITS=$(git log --pretty=format:"- %s" HEAD)
+          else
+            # Get commits since previous tag
+            COMMITS=$(git log --pretty=format:"- %s" ${PREV_TAG}..HEAD)
+          fi
+
+          # Handle multi-line output for GitHub Actions
+          echo "commits<<EOF" >> $GITHUB_OUTPUT
+          echo "$COMMITS" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          generate_release_notes: true
-          append_body: true
           body: |
+            ## What's Changed
+            ${{ steps.changelog.outputs.commits }}
+
+            ---
+
             ## Embed via jsDelivr CDN
 
             Add this to your HTML:
